<resources>
    <string name="app_name">Active</string>
    <string name="add">add student</string>
    <string name="student_pass">Student pass</string>
    <string name="student_number">Student Number</string>
    <string name="student_name">Student Name</string>
    <string name="delete">delete</string>
    <string name="newstudent">newStudent</string>
    <string name="new_student">new_Student</string>
    <string name="number">Number</string>
    <string name="enter_number_of_student">Enter number of student</string>
    <string name="name">Name</string>
    <string name="enter_name_of_student">Enter name of student</string>
    <string name="pass">Pass</string>

</resources>