<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#66009688"
    android:padding="8dp"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/student_name"
        android:layout_width="130dp"
        android:layout_height="77dp"
        android:gravity="center"
        android:paddingRight="8dp"
        android:text="@string/student_name" />
    <TextView
        android:id="@+id/stud_num"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingRight="8dp"
        android:gravity="center"
        android:text="@string/student_number"/>
    <TextView
        android:id="@+id/stud_pass"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingRight="8dp"
        android:text="@string/student_pass"/>
    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:paddingLeft="8dp"
        android:layout_height="match_parent"
        android:text="@string/delete"
        android:background="#F44336" />

</LinearLayout>
